--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>mrt-map/renovate-config:no-dev"
+    "github>mrt-map/renovate-config"
   ],
   "packageRules": [
     {
